<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:background="@drawable/logo_anikku"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/lblUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblUsuario"
        android:textColor="@color/cardview_dark_background" />

    <EditText
        android:id="@+id/txtUser"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:background="@drawable/text_border"
        android:inputType="text"
        android:padding="5sp" />

    <TextView
        android:id="@+id/lblContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblpassword"
        android:textColor="@color/cardview_dark_background" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/text_border"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="5sp" />

    <CheckBox
        android:id="@+id/chkRecordarPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"
        android:text="Recordar" />

    <CheckBox
        android:id="@+id/chkLoginAutomatico"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Login automático"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:layout_marginTop="15sp"
        android:background="@drawable/button_blue"
        android:padding="10sp"
        android:text="@string/lblLogin"
        android:textAllCaps="false"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/lblRecuperar"
        style="@style/Link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3sp"
        android:layout_marginTop="3sp"
        android:clickable="true"
        android:text="@string/lblRecuperarPassword"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textIsSelectable="true"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/lblRegistro"
        style="@style/Link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3sp"
        android:layout_marginTop="3sp"
        android:clickable="true"
        android:text="@string/lblRegister"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textIsSelectable="false"
        android:textSize="15sp" />

</LinearLayout>